Fix spacing and add one more template

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -267,6 +267,10 @@ strong {
   margin: 150px 0
 }
 
+.mb-100 {
+  margin: 0 0 100px 0
+}
+
 .space-right {
   margin-right: 25px
 }
